<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/choosetxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/Confirm"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textSize="25dp"
        android:textStyle="bold"/>


    <LinearLayout
        android:id="@+id/layoutloc"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/locationtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23dp"
            android:text="@string/Continue"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutButton"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <Button
            android:id="@+id/confirm_button"
            android:layout_width="188dp"
            android:layout_height="wrap_content"
            android:text="@string/Yes"
            android:layout_marginRight="5dp"/>

        <Button
            android:id="@+id/decline_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/No" />


    </LinearLayout>




</LinearLayout>