<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg">

    <TextView
        android:id="@+id/choosetxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/EnterDetails"
        android:textColor="@color/black"
        android:layout_marginTop="5dp"
        android:textSize="25dp"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/layoutEdit"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <TextView
            android:id="@+id/popup_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Title" />

        <Spinner
            android:id="@+id/popup_title_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/title_options" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutShare"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <TextView
            android:id="@+id/popup_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Description" />

        <EditText
            android:id="@+id/popup_description_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="Enter a description" />



    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutloc"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <TextView
            android:id="@+id/locationtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/CurrentLocation"/>

    </LinearLayout>

    <Button
        android:id="@+id/form_submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Submit" />


</LinearLayout>