<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:background="@drawable/paymentbackground"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="55dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/acceptJobQuestion"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle=""/>


            <Button
                android:id="@+id/acceptOrderYesBtn"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:text="@string/yes"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/light_black"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/acceptOrderNoBtn"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:text="@string/no"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/light_black"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>