<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/recCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginEnd="12dp"
    android:layout_marginStart="12dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/rectangle"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/promotion"
            app:shapeAppearance="@style/roundImage" />

        <TextView
            android:id="@+id/recTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/rectangle"
            android:text="@string/Work"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/recStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recTitle"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/rectangle"
            android:text="@string/StatusInProgress"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_marginTop="5dp"
            android:id="@+id/recDec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/recStatus"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/rectangle"
            android:text="@string/Tile"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginBottom="5dp"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>


