<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:background="@drawable/paymentbackground"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="55dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:layout_marginTop="45dp">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/paymentEnterAmount"
                android:textAlignment="gravity"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle=""/>

            <EditText
                android:id="@+id/paymentInput"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:ems="10"
                android:inputType="number"
                android:background="@color/white"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:textColor="@color/black"/>

            <Button
                android:id="@+id/paymentBtn"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:text="@string/paymentBtn"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/light_black"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/paymentBtnCancel"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:text="@string/paymentCancelBtn"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/light_black"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>